<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15153C"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerhorizontalline_tbm"
        android:layout_centerInParent="true">

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline_tbm">

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerverticalline_tbm"
        android:background="@drawable/cardbackground"
        android:layout_above="@id/heightlayout_tbm"
        android:layout_marginBottom="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/male_tbm">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textmale_tbm"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/male"
            android:id="@+id/textmale_tbm"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout_tbm"
        android:layout_marginBottom="55dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/centerverticalline_tbm"
        android:background="@drawable/cardbackground"
        android:layout_marginLeft="20dp"
        android:id="@+id/female_tbm">
        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_centerInParent="true"
            android:layout_above="@id/textfemale_tbm"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female"
            android:contentDescription="@string/todo">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/femaletext"
            android:id="@+id/textfemale_tbm"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">
        </TextView>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline_tbm"
        android:layout_marginBottom="-30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cardbackground"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/heightlayout_tbm">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/height"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startingheight"
            android:layout_marginBottom="50dp"
            android:textSize="40sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:id="@+id/currentheight_tbm"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textSize="20sp"
            android:fontFamily="@font/raleway"
            android:textStyle="bold"
            android:layout_toEndOf="@id/currentheight_tbm"
            android:layout_marginStart="20dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white"
            android:layout_marginRight="10dp"
            android:id="@+id/seekbarforheight_tbm">
        </SeekBar>
    </RelativeLayout>
    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/calculatebmi_tbm"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/calculate_your_tbm"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
    </android.widget.Button>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerverticalline_tbm"
        android:background="@drawable/cardbackground"
        android:layout_below="@id/heightlayout_tbm"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/weight_tbm">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:fontFamily="@font/raleway"
            android:id="@+id/textweight_tbm"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">
        </TextView>
        <TextView
            android:id="@+id/currentweight_tbm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingweight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementweight_tbm"
                android:contentDescription="@string/todo">
            </ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/incremetweight_tbm"

                android:src="@drawable/add"
                android:contentDescription="@string/todo">
            </ImageView>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerverticalline_tbm"
        android:background="@drawable/cardbackground"
        android:layout_below="@id/heightlayout_tbm"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/Age">
        <TextView

            android:id="@+id/textage_tbm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">
        </TextView>
        <TextView
            android:id="@+id/currentage_tbm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingage"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementage_tbm"
                android:contentDescription="@string/todo">
            </ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/incrementage_tbm"
                android:src="@drawable/add"
                android:contentDescription="@string/todo">
            </ImageView>
        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AutoTextViewForm"
        android:background="@color/grey_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculatebmi_tbm"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <AutoCompleteTextView
            android:id="@+id/auto_lifestyle"
            android:hint="Escolha Uma Opção"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>