<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15153C"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/progress1"
       app:layout_constraintEnd_toEndOf="@id/progress1"
        app:layout_constraintTop_toTopOf="@id/progress1"
        app:layout_constraintBottom_toBottomOf="@id/progress1"/>


    <com.gustavo.gymapp.CustomProgressbar
        android:id="@+id/progress1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:my_progress="5"
        app:my_progress_bg_color="@color/white"
        app:my_progress_color="#37FF00"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.gustavo.gymapp.CustomProgressbar
        android:id="@+id/progress2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="45dp"
        app:my_progress="25"
        app:my_progress_bg_color="@color/white"
        app:my_progress_color="#FF0000"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.gustavo.gymapp.CustomProgressbar
        android:id="@+id/progress3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="90dp"
        app:my_progress="25"
        app:my_progress_bg_color="@color/white"
        app:my_progress_color="#002FFF"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/carbohydrate"
            android:textColor="#002FFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_carbohydrate"
        android:text="@string/carbohydrate"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/title2"
        app:layout_constraintStart_toStartOf="@id/title2"
        app:layout_constraintTop_toBottomOf="@id/title2"
        />

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/my_toolbar"
            style="@style/EditTextArea"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="1dp"
            app:titleTextColor="@color/white" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardView2"
        app:layout_constraintHorizontal_bias="0.5"
        >
        <LinearLayout
            android:background="#002FFF"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_fastfood_24"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/calories"
        android:textColor="#37FF00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cardView2"
        app:layout_constraintStart_toStartOf="@id/cardView2"
        app:layout_constraintTop_toBottomOf="@id/cardView2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_calories"
        android:text="@string/calories"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/title1"
        app:layout_constraintStart_toStartOf="@id/title1"
        app:layout_constraintTop_toBottomOf="@id/title1"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="36dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress1"
        >
        <LinearLayout
            android:background="#37FF00"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_restaurant_24"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/protein"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cardView3"
        app:layout_constraintStart_toStartOf="@id/cardView3"
        app:layout_constraintTop_toBottomOf="@id/cardView3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_protein"
        android:text="@string/carbohydrate"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/title3"
        app:layout_constraintStart_toStartOf="@id/title3"
        app:layout_constraintTop_toBottomOf="@id/title3"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        >
        <LinearLayout
            android:background="#FF0000"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_cake_24"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>

